fix(safari): prevent flickering on transitions

--- a/styles/includes/_slider.scss
+++ b/styles/includes/_slider.scss
@@ -56,6 +56,8 @@
 
 		img {
 			width: 100%;
+			-webkit-transform-style: preserve-3d;
+			-webkit-backface-visibility: hidden;
 		}
 
 		.swiper-slide {
